--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "element-ui": "^2.4.7",
     "iview": "^3.1.1",
     "vue": "^2.5.2",
+    "vue-picture-viewer": "^1.0.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "vue-resource": "^1.5.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -71,6 +71,7 @@
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
+    "vue-resource": "^1.5.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
